--- a/src/Views/SanPhamJPanel.form
+++ b/src/Views/SanPhamJPanel.form
@@ -211,15 +211,15 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
-                          <Component id="btnThemSP" linkSize="11" min="-2" pref="88" max="-2" attributes="0"/>
+                          <Component id="btnThemSP" min="-2" pref="88" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="99" max="-2" attributes="0"/>
-                          <Component id="btnCapNhatSP" linkSize="11" min="-2" pref="95" max="-2" attributes="0"/>
+                          <Component id="btnCapNhatSP" min="-2" pref="95" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="126" max="-2" attributes="0"/>
-                          <Component id="btnInMaSP" linkSize="11" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnInMaSP" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="110" max="-2" attributes="0"/>
-                          <Component id="btnNhapExcel" linkSize="11" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnNhapExcel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="99" max="-2" attributes="0"/>
-                          <Component id="btnXuatExcel" linkSize="11" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnXuatExcel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
