--- a/src/Views/KhachHangJPanel.form
+++ b/src/Views/KhachHangJPanel.form
@@ -378,6 +378,9 @@
           </SubComponents>
         </Container>
         <Component class="com.toedter.calendar.JDateChooser" name="txtKHNgaySinh">
+          <Properties>
+            <Property name="dateFormatString" type="java.lang.String" value="yyyy-MM-dd"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
