xong xuất hóa đơn

--- a/src/Views/ThanhToanHoaDonJFrame.form
+++ b/src/Views/ThanhToanHoaDonJFrame.form
@@ -237,6 +237,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Thanh To&#xe1;n + In"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton5">
           <Properties>
